<resources>
    <string name="app_name">My Card</string>
    <string name="save">save</string>
    <string name="label_select_background">Select Background</string>
    <string name="hint_header">Header</string>
    <string name="hint_footer">Footer</string>
    <string name="card_image">Card Image</string>
    <string name="edit">Edit</string>

    <string name="title_select_image">Select Image</string>
    <string name="label_from_gallery">From Gallery</string>
    <string name="label_by_camera">By Camera</string>
    <string name="label_cancel">Cancel</string>
    <string name="dialog_img">Image Dialog</string>
    <string name="sharedPref">sharedPreferences</string>
    <string name="title_dialog_permission">Requires Permissions</string>
    <string name="des_permission">We need your permission to access the camera and storage</string>
    <string name="label_grant">Grant</string>
    <string name="scheme_package">package</string>
    <string name="intent_data">data</string>
    <string name="error_empty_from">Please enter who want to wish</string>
    <string name="error_empty_to">Please enter whom you want to wish</string>
    <string name="error_empty_background">Please select image to set as background</string>
    <string name="error_empty_heading">Please enter title of the card</string>
    <string name="hint_title">Title</string>
    <string name="toast_msg_file_saved_to">File saved to: </string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email_id">Email Id</string>
    <string name="label_save">Save</string>
    <string name="hint_slack_username">Slack Username</string>
    <string name="hint_contact">Contact Number</string>
    <string name="hint_github_profile">Github Profile</string>
    <string name="hint_idea">An Idea To Change Life</string>
    <string name="hint_resource_link">Resource Link</string>
    <string name="label_scholarship_track">Scholarship Track</string>
    <string name="label_android_basics">Android Basics (Beginner)</string>
    <string name="label_android_developer">Android Developer (Intermediate)</string>
    <string name="label_front_end_web_basic">Front-End Web Development (Beginner)</string>
    <string name="label_mobile_web">Mobile Web Specialist (Intermediate)</string>
    <string name="hint_your_experience">Udacity Experience</string>
    <string name="hint_problems_resolutions">Problems And Solutions</string>
    <string name="hint_about_journey">About You And Your Journey</string>
    <string name="label_select_profile_picture">Select Profile Picture</string>
    <string name="placeholder">placeholder</string>
    <string name="error_empty_name">Please enter your full name</string>
    <string name="error_empty_username">Please enter your slack username</string>
    <string name="error_empty_email">Please enter your email id</string>
    <string name="error_no_scholarship_track">Please select one of the scholarship track you have been entrolled into</string>
    <string name="error_empty_profile">Please select your profile picture</string>
    <string name="error_empty_git_profile">Please enter your git profile link</string>
    <string name="error_msg_empty_idea">Please enter your idea</string>
    <string name="error_empty_idea_resource_link">Please enter resource link of your idea</string>
    <string name="error_invalid_email">Please enter valid email address</string>
    <string name="error_invalid_git_profile">Please enter valid git profile</string>
    <string name="error_invalid_idea_resource_link">Please enter valid resource link</string>
    <string name="label_submit_idea">Submit Your Idea</string>
    <string name="label_make_my_card">Make My Card</string>
    <string name="label_address">Address</string>
    <string name="label_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="error_msg_empty_address">Please enter your address</string>
    <string name="error_msg_empty_contact">Please enter your contact number</string>
    <string name="error_empty_img">Please select picture that describes you best</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_invalid_contact">Please enter valid contact number</string>
</resources>
