<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root_nested_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.creativeconflux.srdp.mycard.ui.activities.MainActivity"
    >

    <RelativeLayout
        android:id="@+id/layout_grand_parent_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_space_large"
        >

        <ImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_profile_height"
            android:contentDescription="@string/card_image"
            android:scaleType="centerCrop"
            />

        <!--Full Name-->
        <TextView
            android:id="@+id/tv_full_name"
            style="@style/TxtHeader.TxtHeading.Drawable"
            android:layout_below="@id/iv_profile_picture"
            android:drawableLeft="@drawable/ic_user_default"
            android:drawableStart="@drawable/ic_user_default"
            android:paddingBottom="@dimen/view_space"
            android:paddingTop="@dimen/view_space"
            android:text="@string/hint_full_name"
            />

        <!--Address-->
        <TextView
            android:id="@+id/tv_address"
            style="@style/Txt.TxtTitle.Drawable"
            android:layout_below="@id/tv_full_name"
            android:drawableLeft="@drawable/ic_person_location_black"
            android:drawableStart="@drawable/ic_person_location_black"
            android:text="@string/label_address"
            />

        <!--Email-->
        <TextView
            android:id="@+id/tv_email"
            style="@style/Txt.TxtTitle.Drawable"
            android:layout_below="@id/tv_address"
            android:drawableLeft="@drawable/ic_email_black"
            android:drawableStart="@drawable/ic_email_black"
            android:text="@string/label_email"
            />

        <!--Contact-->
        <TextView
            android:id="@+id/tv_contact"
            style="@style/Txt.TxtTitle.Drawable"
            android:layout_below="@id/tv_email"
            android:drawableLeft="@drawable/ic_phone_black"
            android:drawableStart="@drawable/ic_phone_black"
            android:text="@string/placeholder"
            />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
