<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.creativeconflux.srdp.mycard.ui.activities.MainActivity"
    >

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/card_image"
        android:scaleType="centerCrop"
        />

    <!--Title-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_space"
        android:padding="@dimen/view_space"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_full_name"
            style="@style/TxtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:inputType="textCapWords"
            />

    </android.support.design.widget.TextInputLayout>

    <!--Header-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_full_name"
        android:layout_marginRight="@dimen/view_space"
        android:layout_marginEnd="@dimen/view_space"
        android:layout_marginLeft="@dimen/view_space"
        android:layout_marginStart="@dimen/view_space"
        android:paddingStart="@dimen/view_space"
        android:paddingLeft="@dimen/view_space"
        android:paddingRight="@dimen/view_space"
        android:paddingEnd="@dimen/view_space"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_email_id"
            style="@style/Txt.TxtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_header"
            />

    </android.support.design.widget.TextInputLayout>

    <!--Select background-->
    <Button
        android:id="@+id/btn_select_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_email_id"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_gradient"
        android:padding="@dimen/view_space"
        android:layout_margin="@dimen/view_space"
        android:text="@string/label_select_background"
        android:textColor="@color/white"
        />

    <ImageButton
        android:id="@+id/ibtn_select_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/label_select_background"
        android:paddingEnd="@dimen/view_space"
        android:paddingLeft="@dimen/view_space"
        android:paddingRight="@dimen/view_space"
        android:paddingStart="@dimen/view_space"
        android:src="@android:drawable/ic_menu_edit"
        android:visibility="gone"
        />

    <!--Footer-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_select_background"
        android:paddingLeft="@dimen/view_space"
        android:paddingStart="@dimen/view_space"
        android:paddingEnd="@dimen/view_space"
        android:paddingRight="@dimen/view_space"
        android:layout_marginStart="@dimen/view_space"
        android:layout_marginLeft="@dimen/view_space"
        android:layout_marginRight="@dimen/view_space"
        android:layout_marginEnd="@dimen/view_space"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_footer"
            style="@style/Txt.TxtFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/hint_footer"
            />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
